--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-image-progress": "^0.4.0",
     "react-native-keyboard-spacer": "^0.2.0",
     "react-native-listitem": "^1.0.5",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "tcomb-form-native": "^0.6.0"
   }
 }
