--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-controllers": "^1.3.10",
     "react-native-extended-stylesheet": "^0.2.0",
     "react-native-listitem": "^1.0.5",
+    "react-native-navigation": "^1.0.30",
     "stream": "0.0.2",
     "tcomb-form-native": "^0.6.0"
   }
