--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "dependencies": {
     "apsl-react-native-button": "^2.5.0",
     "buffer": "^4.6.0",
-    "react": "^0.14.8",
-    "react-native": "0.24.1",
-    "react-native-controllers": "^1.3.10",
+    "react": "15.2.1",
+    "react-native": "0.31.0",
+    "react-native-controllers": "^2.0.12",
     "react-native-extended-stylesheet": "^0.2.0",
-    "react-native-listitem": "^1.0.5",
     "react-native-navigation": "^1.0.30",
     "stream": "0.0.2",
     "tcomb-form-native": "^0.6.0"
