--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "apsl-react-native-button": "^2.5.0",
     "buffer": "^4.6.0",
+    "lodash": "^4.15.0",
     "react": "^0.14.8",
     "react-native": "0.24.1",
     "react-native-controllers": "^1.3.10",
