--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "react": "^0.14.8",
     "react-native": "0.24.1",
     "react-native-controllers": "^1.3.10",
+    "react-native-button": "^1.3.1",
+    "react-native-dialogs": "0.0.15",
+    "react-native-material-design": "git+https://github.com/react-native-material-design/react-native-material-design.git",
+    "react-native-store": "^0.4.1",
     "react-native-extended-stylesheet": "^0.2.0",
     "react-native-listitem": "^1.0.5",
     "react-native-navigation": "^1.0.30",
