--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.24.1",
     "react-native-controllers": "^1.3.10",
     "react-native-extended-stylesheet": "^0.2.0",
+    "babel-plugin-transform-es2015-block-scoping": "6.15.0",
     "react-native-listitem": "^1.0.5",
     "react-native-navigation": "^1.0.30",
     "stream": "0.0.2",
